# ionization

./: Example_Floquet.ipynb  Example_L_shunted_transmon.ipynb  Optimized_Fit_paper.ipynb  pyproject.toml
.conda/conda-meta/: bzip2-1.0.8-h6c40b1e_6.json  ca-certificates-2025.7.15-hecd8cb5_0.json  expat-2.7.1-h6d0c2b6_0.json  history  libcxx-19.1.7-haebbb44_3.json  libffi-3.4.4-hecd8cb5_1.json  ncurses-6.5-h923df54_0.json  openssl-3.0.17-hee2dfae_0.json  pip-25.2-pyhc872135_0.json  python-3.12.11-he8d2d4c_0.json  readline-8.3-h49f2429_0.json  setuptools-78.1.1-py312hecd8cb5_0.json  sqlite-3.50.2-hc8b0dd6_1.json  tk-8.6.15-h3a5a201_0.json  tzdata-2025b-h04d1e81_0.json  wheel-0.45.1-py312hecd8cb5_0.json  xz-5.6.4-h46256e1_1.json  zlib-1.2.13-h4b97444_1.json
.conda/lib/: libcrypto.3.dylib  libncursesw.6.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
.conda/lib/itcl4.3.0/: itclConfig.sh
.conda/lib/pkgconfig/: expat.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.12-embed.pc  python-3.12.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  zlib.pc
.conda/lib/python3.12/: _sysconfigdata__darwin_darwin.py  _sysconfigdata__darwin_darwin.py.orig  _sysconfigdata_x86_64_apple_darwin13_4_0.py
.conda/lib/python3.12/config-3.12-darwin/: Makefile  (+1 more)
.conda/lib/tdbc1.1.9/: tdbcConfig.sh
ionization/: Transmon_Module.py  Transmon_Module_numpy.py  branch_analysis.py  branch_analysis_Xander.py  floquet_analysis.py
ionization/qutip_v4.0/: floquet_analysis.py
(+150 files in other folders)
